tests/programs/a1/local/invalid/unicode_input.java
public class unicode_input {
  final String x = "ᚪᚾᛁᛣᚩᛞᛖ";
}